--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,6 @@ a.header__menu-inner-link--active {
   margin-right: 10px;
 }
 
-
 .header__enter-field a {
   font-size: 13px;
   font-weight: 400;
@@ -389,13 +388,7 @@ a.header__menu-inner-link--active {
 }
 
 .header__enter-field button {
-  box-shadow: 0px 1px 2px 0 #ac1000;
-  background-image: linear-gradient(to top, #e74a35, #f26843);
-  border-radius: 25px;
-  border: 0;
   text-decoration: none;
-  padding: 15px 25px;
-  text-align: center;
   color: #fefefe;
   font-weight: 700;
   font-size: 18px;
@@ -468,19 +461,6 @@ a.header__menu-inner-link--active {
   text-align: center;
 }
 
-.full-basket {
-  font-weight: 700;
-  font-size: 32px;
-  color: #FFFFFF;
-  background-color: rgba (172, 16, 0, 0.64);
-  box-shadow: 0px 2px 2px 0 rgba(172, 16, 0, 0.64);
-  background-image: linear-gradient(to top, #e74a35, #f26843);
-  border-radius: 50px;
-  width: 282px;
-  padding: 15px 40px;
-  text-decoration: none;
-}
-
 /* Малинка/шоколадка даром */
 
 .gifts {
@@ -512,12 +492,7 @@ a.header__menu-inner-link--active {
 
 .gifts-item__link {
   display: flex;
-  background-color: rgba (172, 16, 0, 0.64);
-  box-shadow: 0px 2px 2px 0 rgba(172, 16, 0, 0.64);
-  background-image: linear-gradient(to top, #e74a35, #f26843);
-  border-radius: 20px;
   text-decoration: none;
-  padding: 10px;
   text-align: center;
   position: absolute;
   right: 21px;
@@ -749,13 +724,16 @@ a.header__menu-inner-link--active {
 }
 
 .article__title {
-
   font-size: 24px;
   font-weight: 700;
   display: block;
   width: 309px;
   text-decoration: underline;
   line-height: 1.3;
+}
+
+.article__title:hover {
+  color: #ffbc9e;
 }
 
 .subscribes {
@@ -842,12 +820,7 @@ a.header__menu-inner-link--active {
   font-size: 18px;
   font-weight: 700;
   display: block;
-  background-color: rgba (172, 16, 0, 0.64);
-  box-shadow: 0px 2px 2px 0 rgba(172, 16, 0, 0.64);
-  background-image: linear-gradient(to top, #e74a35, #f26843);
-  border-radius: 50px;
   text-align: center;
-  padding: 7px 10px;
   margin-top: 10px;
   text-decoration: none;
 }
