--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,11 @@ a.header__menu-inner-link--active {
 .sort_type {
   color: white;
   background-color: transparent;
+  border: 1px solid transparent;
+}
+
+.sort_type:hover {
+  color: #323232;
 }
 
 .form-group-style {
@@ -521,6 +526,10 @@ a.header__menu-inner-link--active {
   margin: 8px 0;
 }
 
+.form-group input:hover {
+  border: 0;
+}
+
 .form-group-button {
   color: white;
   border: 2px solid white;
@@ -528,6 +537,19 @@ a.header__menu-inner-link--active {
   background-color: #9FB3A8;
   padding: 9px 20px;
   margin: 10px;
+}
+
+.form-group-button:hover {
+  color: #323232;
+  background-color:#ffffff;
+}
+
+.form-group-button:active {
+  color: #323232;
+  box-shadow: inset 0px 2px 1px 0 #696969;
+  background-color: #ededed;
+  border: 0;
+  padding: 11px 22px;
 }
 
 .form-group > label {
