--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,13 @@ body {
   box-shadow: 0px 2px 2px 0 #ac1000;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), linear-gradient(to top, #e74a35, #f26843);
   color: #fefefe;
+  text-decoration: none;
 }
 
 .button:active {
   box-shadow: inset 0px 2px 2px 0 #942718;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)), linear-gradient(to bottom, #e74a35, #f26843);
+  text-decoration: none;
 }
 
 .header__menu, .gifts, .catalog, .benefits__list, .social-links, .footer__about, .breadcrumbs, .pagination, .header__menu-inner {
@@ -84,6 +86,7 @@ a {
 
 a:hover {
   color: #ffbc9e;
+  text-decoration: underline #ffbc9e;
 }
 
 /* Ниже стили для шапки */
@@ -178,6 +181,14 @@ a.header__menu-inner-link--active {
 .header__menu-link:hover {
   color: #323232;
   background-color: #f7f6f3;
+  text-decoration: none;
+}
+
+.header__menu-link:active {
+  color: #323232;
+  box-shadow: inset 0px 2px 1px 0 #696969;
+  background-color: #ededed;
+  text-decoration: none;
 }
 
 .header__menu-link {
@@ -226,16 +237,12 @@ a.header__menu-inner-link--active {
   filter: none;
 }
 
-/* Сделать цвет слова корзина черным */
-
 .header__enter-link:hover,
 .header--basket-link:hover,
 .header__basket-link:hover {
   background-color: #f8f7f4;
   color: #323232;
 }
-
-/* Сделать замену иконке при ховере на черную */
 
 .header__user-buttons-find:hover .header__find-field {
   display: inline-block;
@@ -745,6 +752,10 @@ a.header__menu-inner-link--active {
   font-weight: 500;
 }
 
+.article__rubric:hover {
+  text-decoration: none;
+}
+
 .article__title {
   font-size: 24px;
   font-weight: 700;
@@ -835,6 +846,11 @@ a.header__menu-inner-link--active {
 
 .address a {
   color: #323232;
+}
+
+.address a:hover {
+  text-decoration: none;
+  color: #ffbc9e;
 }
 
 .address .address__button {
@@ -936,6 +952,7 @@ line-height: 1.38;
   font-size: 16px;
   font-weight: 500;
   color: #323232;
+  text-decoration: none;
 }
 
 .pagination__item {
@@ -946,6 +963,7 @@ line-height: 1.38;
 .pagination__link:hover {
   color: #ffffff;
   background-color: rgba(255, 255, 255, 0.2);
+  text-decoration: none;
 }
 
 .pagination__link {
